@@ -9,7 +9,7 @@
     </xs:documentation>
 	</xs:annotation>
 	<xs:import schemaLocation="dkabm_types.xsd"/>
-	<xs:element name="record" type="elementsAndRefinementsGroup"/>
+	<xs:element name="record" type="dkabm:elementsAndRefinementsGroup"/>
 	<xs:element name="collection">
 		<xs:complexType>
 			<xs:sequence>
