@@ -1,5 +1,7 @@
 0.4
 ===
+Structure fro caching made
+Different/alternate approach when making collections
 "more" in reply
 New xsd describing collections
 Work relations found using RIsearch
